# benfica_discord_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  bot.py  bot.py.backup  configuration.py  covers.py  discord.conf.example  gen_browser.py  immutables.py  next_match.py  pyproject.toml  pytest.ini  totw.py
classes/: cookies.py
commands/: calendar.py  covers.py  decorators.py  events.py  help.py  match.py  totw.py
config/: constants.py  paths.py  settings.py  validation.py
core/: benfica_calendar.py  browser.py  covers.py  health_check.py  logging_config.py  match.py  rate_limit.py  retry.py  team_of_week.py
core/match/: __init__.py  formatter.py  refresh.py  repository.py  sources.py
core/utils/: __init__.py  date_parser.py
scripts/: check_bot_health.sh
tasks/: daily.py
tests/: conftest.py
tests/test_commands/: test_covers.py  test_match.py
tests/test_config/: test_constants.py  test_settings.py  test_validation.py
tests/test_core/: test_benfica_calendar.py  test_browser.py  test_covers.py  test_formatter.py  test_match.py  test_rate_limit.py  test_retry.py  test_team_of_week.py
tests/test_core/test_utils/: __init__.py  test_date_parser.py
tests/test_tasks/: test_daily.py
