[tool.poetry]
name = "benfica-discord-bot"
version = "0.1.0"
description = ""
authors = ["Edgar Gonçalves <edgar.g.goncalves@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.1.0"
bs4 = "^0.0.1"
requests = "^2.28.2"
apscheduler = "^3.9.1.post1"
charset-normalizer = "2.1.1"
aiohttp = "^3.8.3"
selenium = "^4.7.2"
webdriver-manager = "^3.8.5"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
